<resources>
    <string name="app_name">VTV Travel</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyA6TvgC0sG_Va-FvACxm7nhaw43RJBaF8U</string>
    <string name="facebook_app_id">552584745181558</string>
    <string name="place">Địa điểm</string>
    <string name="search">Hãy cùng khám phá Việt Nam xinh đẹp</string>
    <string name="event">Sự kiện</string>
    <string name="show_all">Tất cả</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="hotel">Khách sạn</string>
    <string name="length_1km">1Km</string>
    <string name="length_2km">2Km</string>
    <string name="length_5km">5Km</string>
    <string name="show">Hiển thị</string>
    <string name="near_you">Xung quanh bạn</string>
    <string name="bt_near_you">Khám phá</string>
    <string name="video_similar">Video cùng chuyên mục</string>
    <string name="video_category">Chuyên mục video</string>
    <string name="result_search">Không có kết quả cho từ khóa tìm kiếm</string>
    <string name="notify_null_streaming">Video đang cập nhật, quý khách vui lòng chọn video khác để xem!</string>
    <string name="location_current">gần vị trí của bạn</string>
    <string name="call">OK</string>
    <string name="dimiss">Hủy</string>
    <string name="calling_address">Tổng đài du lịch 1039</string>
    <string name="map">Bản đồ</string>
    <string name="is_develop">Chức năng đang được hoàn thiện và phát triển.</string>
    <string name="chat">Tin nhắn</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="phone_number">Nhập số điện thoại</string>
    <string name="pass">Mật khẩu</string>
    <string name="register_acc">Đăng kí tài khoản</string>
    <string name="repass">Nhập lại mật khẩu</string>
    <string name="start_broadcasting">Start</string>
    <string name="live_video">Live Video</string>
    <string name="play_live">Play Video</string>
    <string name="stream_not_started">Failed to start. Please check server icon_url and security credentials.</string>
    <string name="encode">Mã Hóa</string>
    <string name="tv_go">Đi Đâu?</string>
    <string name="tv_food">Ăn Gì?</string>
    <string name="tv_play">Chơi Gì?</string>
    <string name="tv_living">Ở Đâu?</string>
    <string name="login_via_fb_or_gg">Hoặc đăng nhập bằng</string>
    <string name="for_got_pass">Quên mật khẩu</string>
    <string name="name_input">Nhập họ tên</string>
    <string name="otp_input">Nhập mã OTP</string>
    <string name="tv_note_otp">Mã xác thực đã được gửi về số điện thoại %1$s dưới dạng tin nhắn.\n Hãy nhập mã OTP</string>
    <string name="resend_otp">Gửi lại mã xác thực</string>
    <string name="verify">Xác nhận</string>
    <string name="next">Tiếp tục</string>
    <string name="input_new_pass">Nhập mật khẩu mới</string>
    <string name="input_repass">Nhập lại mật khẩu</string>
    <string name="phone_empty">Vui lòng nhập số điện thoại để đăng nhập.</string>
    <string name="phone_empty_v2">Số điện thoại không được để trống.</string>
    <string name="pass_empty">Vui lòng nhập mật khẩu</string>
    <string name="otp_empty">Vui lòng nhập mã xác thực.</string>
    <string name="tv_video">Video</string>
    <string name="khoanh_khac">Khoảnh khắc</string>
    <string name="tv_goiy">Gợi ý</string>
    <string name="noi_bat">Nổi bật</string>
    <string name="re_pass_invalid">Mật khẩu không khớp</string>
    <string name="register_now">Bạn chưa có tài khoản Đăng kí ngay</string>
    <string name="register_now_click">Đăng kí ngay</string>
    <string name="update_info">Chỉnh sửa thông tin</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="receive_notify">Nhận thông báo</string>
    <string name="language">Ngôn ngữ</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="full_name">Họ tên</string>
    <string name="mail">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="birth">Ngày sinh</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="gender">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="cmnd">Số CMND</string>
    <string name="about_me">Giới thiệu</string>
    <string name="cancel">Hủy</string>
    <string name="save">Lưu</string>
    <string name="share_your_moment">Chia sẻ khoảnh khắc của bạn</string>
    <string name="acc_tour">Tour</string>
    <string name="acc_schedule">Lịch trình</string>
    <string name="acc_video">Khoảnh khắc</string>
    <string name="notify">Thông báo</string>
    <string name="notify_system">Hệ thống</string>
    <string name="notify_bussiness">Khuyến mại</string>
    <string name="notice_forgot_pass">Vui lòng nhập số điện thoại để lấy lại\n mật khẩu</string>
    <string name="other">Khác</string>
    <string name="from_gallery">Bộ sưu tập</string>
    <string name="from_camera">Máy ảnh</string>
    <string name="label_select_picture">Chọn Ảnh</string>
    <string name="toast_cannot_retrieve_selected_image">Image error</string>
    <string name="toast_cannot_retrieve_cropped_image">Crop error</string>
    <string name="format_crop_result_d_d">Crop Result</string>
    <string name="toast_unexpected_error">Image error</string>
    <string name="name_empty">Vui lòng nhập họ tên!</string>
    <string name="filter">Lọc</string>
    <string name="write_comment">Viết bình luận ...</string>
    <string name="tvTitlePass">Mật khẩu:</string>
    <string name="title_news_relate">Tin liên quan</string>
    <string name="title_news_same_category">Tin cùng chuyên mục</string>
    <string name="title_news_relate2">Có thể bạn quan tâm</string>
    <string name="title_news_same_category2">Bài viết cùng tác giả</string>
    <string name="suggest_travel_title"><![CDATA[<b><font color="#f79c30" size="10">VTV Travel</font></b> xin chào bạn. <br/>Hà Nội đang \"Gió lạnh đầu mùa\".<br/><b><font color="#333333">Hãy lên lịch trình để khám phá cái lạnh <br/>đầu mùa của Thủ đô tối nay nào.</font></b> ]]></string>
    <string name="vtv_travel_goi_y">VTV Travel gợi ý cho bạn</string>
    <string name="vtv_travel_schedule">Tự tạo lịch trình</string>
    <string name="suggest_travel">Gợi ý du lịch</string>
    <string name="suggest_travel_for_you">VTV Travel gửi bạn lịch trình</string>
    <string name="edit_schedule">Thêm địa điểm</string>
    <string name="finish">Hoàn thành</string>
    <string name="share">Chia sẻ</string>
    <string name="my_shedule">Lịch trình của bạn</string>
    <string name="my_shedule_happy">Chúc bạn có thời gian trải nghiệm \nvui vẻ và thú vị.</string>
    <string name="tv_change_pass">Hãy cập nhật mật khẩu mới cho tài khoản này.</string>
    <string name="update">Cập nhật</string>
    <string name="input_old_pass">Nhập mật khẩu cũ</string>
    <string name="title_change_pass_tb">Đổi mật khẩu</string>
    <string name="change_pass_success">Bạn đã cập nhật mật khẩu thành công</string>
    <string name="view_more">Xem thêm</string>
    <string name="video_clip">Video Clip</string>
    <string name="cancel_filter">Bỏ lọc</string>
    <string name="apply">Áp dụng</string>
    <string name="search_city">Tìm Tỉnh/Thành Phố</string>
    <string name="title_city">Chọn Tỉnh/Thành Phố</string>
    <string name="loading">Loading</string>
    <string name="photo_nice">Góc ảnh đẹp</string>
    <string name="tv_voucher">Cơ hội du lịch</string>
    <string name="moment">Khoảnh Khắc</string>
    <string name="travel">Du Lịch</string>
    <string name="short_title_moment">Blog chia sẻ về những kinh nghiệm khi đi du lịch với trải nghiệm thực tế và đầy thú vị.</string>
    <string name="add_moment">+ Chia sẻ khoảnh khắc</string>
    <string name="day_start_schedule">Chọn ngày khởi hành</string>
    <string name="done">Xong</string>
    <string name="detail_suggest_travel">Chi tiết lịch trình</string>
    <string name="create_schedule_travel">Tự tạo lịch trình riêng cho bạn</string>
    <string name="tab_schedule_eat">Ăn gì</string>
    <string name="tab_schedule_shopping">Ở đâu</string>
    <string name="tab_schedule_play">Chơi gì</string>
    <string name="schedule_empty">Hãy chọn lịch trình để tiếp tục!</string>
    <string name="add_schedule">+ Thêm địa điểm</string>
    <string name="my_schedule_travel">Lịch trình của bạn</string>
    <string name="create_schedule_success">Lịch trình của bạn được tạo thành công!</string>
    <string name="create_tour_success">Tour của bạn được lưu thành công!</string>
    <string name="my_travel_schedule">Lịch trình của bạn</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="not_schedule">Chưa có lịch trình nào.</string>
    <string name="menu_filter">Danh mục</string>
    <string name="date_start_empty">Chọn ngày bắt đầu để lưu tour.</string>
    <string name="not_tour">Chưa có Tour nào.</string>
    <string name="title_voucher"><![CDATA[CHÀO MỪNG BẠN ĐẾN VỚI <b><font color="#f79c30">VTV TRAVEL.</font></b><br/>Hãy khám phá những ưu đãi đặc biệt của<b><font color="#333333"> VTV <br/>Travel </font></b>dành riêng cho bạn ngày hôm nay ]]> </string>
    <string name="title_search_keyword">Có %1$s kết quả cho: \"<![CDATA[<font color="#13a4af"><b>%2$s</b></font>]]> \"</string>
    <string name="title_search_keyword_empty">Không có kết quả tìm kiếm cho: \"<![CDATA[<font color="#13a4af"><b>%1$s</b></font>]]> \"</string>
    <string name="title_voucher_tbar">Dành riêng cho bạn</string>
    <string name="comment">Bình luận</string>
    <string name="function_develop">Chức năng đang hoàn thiện.</string>
    <string name="empty_notify">Chưa có thông báo.</string>
    <string name="gallery">Thư viện ảnh</string>
    <string name="add_cover">Thêm hình cover cho bài viết</string>
    <string name="title_content">Tiêu đề bài viết</string>
    <string name="short_des">Mô tả ngắn</string>
    <string name="add_photo">+Thêm Ảnh</string>
    <string name="noi_dung_bai_viet">Nội dung bài viết</string>
    <string name="share_photo">Chia sẻ ảnh</string>
    <string name="share_moment">Đăng bài</string>
    <string name="choose_photo">Chọn Ảnh</string>
    <string name="choose_over_photo">Bạn đã chọn quá số lượng ảnh cho phép.</string>
    <string name="title_of_photo">Tiêu đề ảnh</string>
    <string name="add_title">Thêm tiêu đề cho khoảnh khắc</string>
    <string name="add_short_des">Thêm mô tả ngắn cho khoảnh khắc.</string>
    <string name="type_moment">Chuyên mục:</string>
    <string name="tags">Tags:</string>
    <string name="not_have_name_file">Bạn hãy điền đầy đủ tiêu đề ảnh!</string>
    <string name="share_moment_success">Khoảnh khắc của bạn đã được chia sẻ.</string>
    <string name="share_moment_faile">Khoảnh khắc của bạn chưa được chia sẻ. Hãy thử lại!</string>
    <string name="not_moment">Bạn chưa chia sẻ khoảnh khắc nào.</string>
    <string name="error_system">Đang nâng cấp hệ thống. Bạn vui lòng truy cập sau!</string>
    <string name="open_door">Mở cửa</string>
    <string name="name_invalid">Tên vượt quá 60 ký tự cho phép</string>
    <string name="phone_invalid">Số điện thoại bạn nhập không đúng định dạng. Xin vui lòng nhập lại.</string>
    <string name="phone_or_pass_invalid">Số điện thoại hoặc mật khẩu không đúng vui lòng thử lại.</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_comment_success">Bạn đã bình luận thành công. VTV Travel xin cảm ơn bạn và đang chờ duyệt.</string>
    <string name="pass_invalid">Mật khẩu phải lớn hơn 6 ký tự.</string>
    <string name="special_charactor">Họ tên chỉ được nhập từ 3 đến 60 ký tự và không được chứa ký tự đặc biệt. Xin vui lòng nhập lại.</string>
    <string name="logout_title">Bạn có muốn thoát khỏi tài khoản?</string>
    <string name="tab_text_1">Tab1</string>
    <string name="tab_text_2">Tab2</string>
    <string name="tab_text_3">Tab3</string>
    <string name="tab_text_4">Tab4</string>
</resources>