<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="accountViewModel"
            type="com.namviet.vtvtravel.viewmodel.AccountViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar_title" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@mipmap/logo_login" />

        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_new_pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/gray_33"
                android:textColorHint="@color/gray_99"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edRePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/input_repass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/gray_33"
                android:textColorHint="@color/gray_99"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/btRegister"
                android:layout_width="@dimen/_115sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_update"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>


    </RelativeLayout>
</layout>