<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="accountViewModel"
            type="com.namviet.vtvtravel.viewmodel.AccountViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar_title" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@mipmap/logo_login" />


        <RelativeLayout
            android:id="@+id/llForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/llInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:textAlignment="center"
                    android:textColor="@color/gray_33"
                    android:textColorHint="@color/gray_99"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/edPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/gray_33"
                    android:textColorHint="@color/gray_99"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_button_update"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <com.namviet.vtvtravel.widget.RobotoTextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInput"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/for_got_pass"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"
                app:typeface="roboto_regular" />

            <com.namviet.vtvtravel.widget.RobotoTextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgotPass"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/register_now"
                android:textColor="@color/gray_33"
                android:textSize="@dimen/_13sdp"
                app:typeface="roboto_regular" />
        </RelativeLayout>

        <!--Disable Login facebook and google-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llForm"
            android:layout_marginTop="@dimen/_60sdp"
            android:visibility="gone">

            <com.namviet.vtvtravel.widget.RobotoTextView
                android:id="@+id/tvLoginViaFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/login_via_fb_or_gg"
                android:textColor="@color/gray_33"
                android:textSize="@dimen/_13sdp"
                app:typeface="roboto_regular" />

            <LinearLayout
                android:id="@+id/llSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLoginViaFb"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_50sdp"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btLoginFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:visibility="gone" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btLoginGg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/ivLoginFb"
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:alpha="0.3"
                    android:clickable="false"
                    android:src="@mipmap/login_fb" />

                <ImageView
                    android:id="@+id/ivLoginGg"
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@mipmap/login_gg" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>