<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="placeViewModel"
            type="com.namviet.vtvtravel.viewmodel.PlaceViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlBottom"
            android:layout_below="@+id/toolBar"
            android:background="@mipmap/bg_suggest"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlTabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp">

                <com.daimajia.slider.library.RobotoTextView
                    android:id="@+id/tbScheduleEat"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@color/color_bg_tv_notify"
                    android:gravity="center"
                    android:text="@string/tab_schedule_eat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    app:typeface="roboto_bold" />

                <com.daimajia.slider.library.RobotoTextView
                    android:id="@+id/tbScheduleShopping"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_toRightOf="@+id/tbScheduleEat"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/tab_schedule_shopping"
                    android:textColor="@color/gray_33"
                    android:textSize="@dimen/_11sdp"
                    app:typeface="roboto_bold" />

                <com.daimajia.slider.library.RobotoTextView
                    android:id="@+id/tbSchedulePlay"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_toRightOf="@id/tbScheduleShopping"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/tab_schedule_play"
                    android:textColor="@color/gray_33"
                    android:textSize="@dimen/_11sdp"
                    app:srcCompat="@drawable/vt_arrow_schedule_white"
                    app:typeface="roboto_bold" />

                <ImageView
                    android:id="@+id/arrowEat"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_80sdp"
                    android:background="@drawable/bg_circel_tab"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/vt_arrow_schedule_orange" />

                <ImageView
                    android:id="@+id/arrowShopping"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_180sdp"
                    android:background="@drawable/bg_circel_tab"
                    android:padding="@dimen/_4sdp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/vt_arrow_schedule_orange" />

            </RelativeLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/vpSchedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_below="@+id/rlTabs"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp" />


        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvScheduleSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlBottom"
            android:layout_below="@+id/toolBar"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f5"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <LinearLayout
                android:id="@+id/llSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.daimajia.slider.library.RobotoTextView
                    android:id="@+id/tvAddMore"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@color/color_bg_tv_notify"
                    android:gravity="center"
                    android:text="@string/add_schedule"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:typeface="roboto_bold" />

                <com.daimajia.slider.library.RobotoTextView
                    android:id="@+id/tvSave"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:typeface="roboto_bold" />
            </LinearLayout>

            <com.daimajia.slider.library.RobotoTextView
                android:id="@+id/tvNext"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:background="@color/color_bg_tv_notify"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:visibility="visible"
                app:typeface="roboto_bold" />
        </RelativeLayout>

    </RelativeLayout>
</layout>